# MasterThesisSource

Android/: .gitignore
Android - Sensor Enhanced Images Camera/app/: build.gradle
Android - Sensor Enhanced Images Camera/app/src/main/java/zinno/videosensorawaredata/: CameraSurface.java
Android - Sensor Enhanced Images Camera/app/src/main/res/layout/: activity_camera.xml  activity_video_record_activity2.xml
Android - Sensor Enhanced Images Camera/app/src/main/res/menu/: video.xml
Android - Sensor Enhanced Images Camera/gradle/wrapper/: gradle-wrapper.properties
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/zinno/videosensorawaredata/: CameraActivity.java  VideoActivity.java  VideoActivity3.java  VideoRecordActivity2.java
Android/app/src/main/res/layout/: activity_video.xml
Android/app/src/main/res/menu/: camera.xml  video_record_activity2.xml
Android/app/src/main/res/values/: strings.xml
DataSets/20141210_145225/: sensor.txt
DataSets/20141210_145302/: sensor.txt
DataSets/20141210_145410/: sensor.txt
DataSets/20141210_150001/: sensor.txt
DataSets/Warsaw Business School Gate and Entrance/: sensor.txt
DataSets/Warsaw Shopping Center Back/: sensor.txt
DataSets/Warsaw Shopping Center Front/: sensor.txt
DataSets/Warsaw University of Technology/: sensor.txt
DataSets/Warsaw University of technology main building/: sensor.txt
Desktop/: CMakeLists.txt  local.properties
Desktop-Enhanced 3D Reconstructer/: out_camera_data.yml
Desktop-Enhanced 3D Reconstructer/src/: FeatureMatching.cpp  FeatureMatching.h  MultiView.cpp  MultiView.h  TestUtils.cpp  Utils64.h  cvsba_simple_test.cpp  modelest.cpp  testOfImplementationEfficency.cpp
Desktop-Enhanced 3D Reconstructer/src/five-point-nister/: five-point.cpp  modelest.cpp  precomp.hpp
Desktop-Enhanced 3D Reconstructer/src/one-point/: one-point.cpp
Desktop/src/: 5point.cpp  FeatureMatchingOCV3.cpp  IOUtils.h  MultiView.cpp  MultiView.h  TestUtils.h  Utils64.h  demo.cpp  main.cpp  main1.cpp  main2.cpp  modelest.h  temp- usefull commads  testOfImplementationEfficency.cpp  test_Reconstruct.cpp  test_bundleAdjust.cpp
Desktop/src/five-point-nister/: _modelest.h  five-point.hpp
Desktop/src/four-point-groebner/: four-point-groebner.cpp
Desktop/src/four-point-numerical/: four-point-numerical.cpp
Desktop/src/one-point/: _modelest.h  modelest.cpp
